# sibx

./: .gitmodules  Dockerfile  Dockerfile.sib  Dockerfile.sibx  README.md  example.txt  sib.sh
original-sib-source/: README.md
original-sib-source/ast-frontend/: Makefile  README.md  plugin.hpp  tool.cpp
original-sib-source/eval/: bochs.py  bochs_ccache.py  bochs_check.py  bochs_wop_check.py  eval.py  linux.py  linux_ccache.py  linux_check.py  openssl_ccache.py  openssl_gt.py  openssl_wop.py  projectmanager.py  sqlite.py  sqlite_ccache.py  sqlite_wop_check.py
original-sib-source/mpc/: README.md
original-sib-source/mpc/src/: helper.rs  interval.rs
original-sib-source/plugin/: .gitignore  Makefile  PPCallbacks.hpp  README.md  plugin.cpp
patches/: openssl-example.patch
patches/openssl/: openssl-not-bother.patch
patches/sqlite/: sqlite-affect-all-2.patch  sqlite-affect-all.patch  sqlite-affect.patch  sqlite-not-affect.patch
repos/openssl/: build.sh
repos/sqlite/: build.sh
sibsrc/ast-frontend/: .gitignore  MyRecursiveASTVisitor.hpp  plugin.cpp  test.c
sibsrc/eval/: Dockerfile  README.md  bochs_wop.py  eval.sh  linux_config_gen.sh  linux_gt.py  linux_wop.py  linux_wop_check.py  openssl.py  openssl_check.py  openssl_wop_check.py  sqlite_check.py  sqlite_gt.py  sqlite_wop.py  usage.py
sibsrc/mpc/: Cargo.toml
sibsrc/mpc/src/: checkpoint.rs  main.rs
sibsrc/mpc/src/git/: mod.rs
sibsrc/mpc/src/plugin/: compile_commands.rs  usage_storage.rs
sibsrc/mpc/test/: test.c.info
sibsrc/plugin/: PPCallbacks.cpp  plugin.hpp
(+4 files in other folders)
