[package]
name = "mpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["xxhash3"]
murmur3 = ["dep:murmur3"]
xxhash3 = ["dep:twox-hash"]

[dependencies]
clap = { version = "4", features = ["derive"] }
git2 = { version = "0.16", default-features = false }
log = { version = "0.4", features = ["release_max_level_info"] }
murmur3 = { version = "0.5", optional = true }
rayon = "1"
rust-lapper = { version = "1", features = ["with_serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simple_logger = "4"
twox-hash = { version = "1", optional = true }
walkdir = "2"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"
